--- a/WebVideoPortal/Views/Web.config
+++ b/WebVideoPortal/Views/Web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="WebVideoPortal" />
         <add namespace="WebVideoPortal.Models"/>
+        <add namespace="WebVideoPortal.Web.Helpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
